# th-terminology-services

./: .gitignore
demo/gateway/: docker-compose.yml
demo/gateway/nginx/conf.d/: fhirterm.conf  keycloak.conf  rbac.js  snowstorm.conf
demo/gateway/opa/: fhir.rego  rbac.json  snowstorm.rego
term-to-fhir-format/src/: README.md  pyproject.toml  transform-tmlt-to-fhir-format.py  transform-tmt-to-fhir-format.py  utils.py
term-to-fhir-format/src/config/: tmlt-base.json  tmt-base.json
